# dns-rust

./: .gitignore  Cargo.toml  README.md
config/: cache_bytes_u.toml  example.toml  isp.toml  rec.toml  recursor.toml  up.toml
docs/: Cache-00.md  Cache.md  Configuración del sistema.md  Ejecucion Modo Desarollo.md  alternar-config.txt  bootstrap-roots-dnssec.md  bootstrap.md  compliance.md  opciones_cache.md  references.md
nouse/: todo.md  todo.txt  todo0.txt
patches/: dns_integration_ra.diff  dns_integration_ra_test.diff  handler_ra.diff
scripts/: bootstrap_update.sh  bootstrap_update_roots.sh
src/: cache.rs  config.rs  filters.rs  forwarder.rs  handler.rs  lib.rs  main.rs  recursor_engine.rs  zones.rs
tests/: README.md  bash-test.sh  dns_integration.rs
zones/: example.local.toml
