[package]
name = "rust-dns-recursor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
# Enable DNSSEC validation (uses ring crypto backend, same naming convention as Hickory DNS).
dnssec = ["hickory-recursor/dnssec-ring", "hickory-proto/dnssec-ring"]

[dependencies]
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
toml = "0.8"

ipnet = "2"
moka = { version = "0.12", features = ["future"] }

# DNS protocol + server primitives
hickory-proto = "0.25.2"
hickory-server = "0.25.2"
hickory-recursor = "0.25.2"


[dev-dependencies]
assert_cmd = "2"
predicates = "3"
