[package]
name = "rust-dns-recursor"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
dnssec = ["hickory-recursor/dnssec-ring", "hickory-proto/dnssec-ring"]

[dependencies]
anyhow = "1"
thiserror = "2"
async-trait = "0.1"

tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
toml = "0.8"

ipnet = "2"
moka = { version = "0.12", features = ["future"] }

hickory-proto = "0.25.2"
hickory-server = "0.25.2"
hickory-resolver = "0.25.2"
hickory-recursor = "0.25.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net"] }
tempfile = "3"
assert_cmd = "2"
